# chimeric-contig-detector

./: .dockerignore  .gitignore  BENCHMARKING_GUIDE.md  CHANGELOG.md  CHECKV_COMPARISON.md  CLEANUP_SUMMARY.md  CONFIG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SESSION_SUMMARY.md  DOCKER.md  Dockerfile  GETTING_STARTED.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  README_READPAIR.md  README_SIMPLE.md  analyze_assembly_lengths.py  compare_checkv_ccd.py  create_test_dataset.py  debug_coverage_detection.py  debug_detection.py  debug_gc_detection.py  environment-minimal.yml  environment.yml  initialize_git.sh  pyproject.toml  requirements.txt  setup.py  setup_repository.sh  simple_detection_test.py  test_bam_fix.py  test_bam_keyerror_fix.py  test_config_basic.py  test_multi_sample_fix.py  test_simple_pipeline.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml
archive/debug_files/: debug_detection_core.py  debug_range_error.py  test_consolidation.py  test_full_pipeline.py  test_multi_sample_simulation.py
archive/legacy_multi_method/: analyzer.py  cli.py  detector.py  resolver.py  test_detector_comprehensive.py  visualizer.py
archive/redundant_scripts/: gc_only_detector.py  simple_chimera_detector.py
archive/test_outputs/demo_results/: coassembly_summary.json
archive/test_outputs/demo_results_new/: chimeric_detective_results.json  coassembly_summary.json
archive/test_outputs/demo_results_single/: chimeric_detective_results.json  coassembly_summary.json  splitting_decisions.tsv
archive/test_outputs/gc_test_output/: gc_chimera_report.tsv
archive/test_outputs/test_balanced_improved_output/: chimeric_detective_results.json  coassembly_summary.json  splitting_decisions.tsv
archive/test_outputs/test_balanced_output/: chimeric_detective_results.json
archive/test_outputs/test_consolidation_output/: chimeric_detective_results.json  splitting_decisions.tsv
archive/test_outputs/test_output/: combined_results.json  multi_sample_report.html
archive/test_outputs/test_sensitive_output/: chimeric_detective_results.json  coassembly_summary.json  splitting_decisions.tsv
archive/test_outputs/test_very_sensitive_output/: chimeric_detective_results.json  coassembly_summary.json  splitting_decisions.tsv
benchmarking/: QUICK_REFERENCE.md  README.md  benchmark_chimeric_detective.py  example_benchmark.py  quick_benchmark.sh
demo_results/: chimeric_detective_report.html  chimeric_detective_results.json  coassembly_summary.json  combined_results.json  multi_sample_report.html  multi_sample_summary.tsv  splitting_decisions.tsv
docs/: TUTORIAL.md
examples/: example_usage.py  multi_sample_example.py  readpair_detection_example.py  simple_gc_detection.py
examples/config_examples/: default.yaml  high_sensitivity.yaml  hpc_slurm.yaml  large_assembly.yaml
large_test_output/: multi_sample_report.html
src/chimeric_detective/: __init__.py  analyzer.py  analyzer_simple.py  cli.py  cli_simple.py  config.py  constants.py  detector.py  detector_simple.py  multi_sample.py  resolver.py  resolver_simple.py  utils.py  visualizer.py  visualizer_simple.py
src/chimeric_detective/readpair_based/: __init__.py  analyzer.py  architecture.md  bamparser.py  cli.py  config.py  core.py  output.py  visualizer.py
test_data_large/: chimeric_info.txt
tests/: conftest.py  test_config.py  test_detector.py  test_detector_comprehensive.py  test_imports.py  test_simple_detector.py  test_utils.py
